--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -76,6 +76,48 @@
                                         </div>
                                     </div>
                                 </div>
+                                
+                                <#if (project_type?? && project_type == 'WORKFLOWTASK')>	
+                                	
+                                	<#if configuration.workflowFormConfigRequired?? && configuration.workflowFormConfigRequired=="1">	
+	                                	<!-- Group form WorkflowFormConfigRequired -->
+		                                 <div class="row mb-3 align-items-start">
+		                                    <label class="col-form-label col-md-2 text-end align-self-start">
+		                                        #i18n{pluginwizard.pluginwizard_create_attribute.labelWorkflowFormConfigRequired} : 
+		                                    </label>
+		                                    <div class="col-md-10">
+		                                        <div class="col-md-10 d-flex align-items-center">
+										        	<div class="form-check me-3">
+		                                            	<input class="form-check-input" type="checkbox" name="workflow_form_config_required" value="1">
+		                                        	</div>
+			                                        <div class="card flex-fill">  
+											            <div class="card-body">
+				  											#i18n{pluginwizard.pluginwizard_create_attribute.helpFormConfig}
+				  										</div>
+				  									</div>
+				  								</div>
+		                                	</div>	
+		                                 </div>
+		                            </#if>
+		                            <#if configuration.workflowFormTaskRequired?? && configuration.workflowFormTaskRequired=="1">     
+			                             <!-- Group form Form Task Required -->
+		                                <div class="row mb-3 align-items-start">
+										    <label class="col-form-label col-md-2 text-end align-self-start">
+										        #i18n{pluginwizard.pluginwizard_create_attribute.labelWorkflowFormTaskRequired} : 
+										    </label>
+										    <div class="col-md-10 d-flex align-items-center">
+										        <div class="form-check me-3">
+										            <input class="form-check-input" type="checkbox" name="workflow_form_task_required" value="1">
+										        </div>
+										        <div class="card flex-fill">  
+										            <div class="card-body">
+										                #i18n{pluginwizard.pluginwizard_create_attribute.helpFormTask}
+										            </div>
+										        </div>
+										    </div>
+										</div>
+									</#if>
+                                </#if>
 
 								<!-- Submit Buttons -->
 								<div class="row mb-3">
@@ -83,7 +125,7 @@
                                         <button type="submit" name="action_createAttribute" class="btn btn-primary me-2">
                                             #i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
                                         </button>
-                                        <button type="submit" name="view_modifyBusinessClass" class="btn btn-secondary">
+                                        <button type="submit" name=<#if (project_type?? && project_type == 'WORKFLOWTASK')>"view_modifyConfigurationClass"<#else>"view_modifyBusinessClass"</#if> class="btn btn-secondary">
                                             #i18n{pluginwizard.pluginwizard_create_attribute.buttonBack}
                                         </button>
                                     </div>
