--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -29,7 +29,7 @@
 
                             	<input type="hidden" name="page" value="pluginwizard" />
                             	<input type="hidden" name="id_plugin" value="${plugin_id}" />
-
+								
                                 <!-- Group form Plugin Name -->
                                 <div class="row mb-3 d-flex align-items-center">
                                     <label class="col-form-label col-md-2 text-end">
@@ -47,11 +47,14 @@
                                     </label>
                                     <div class="col-md-10">
                                         <input class="form-control" type="text" name="type"
-                                               value=<#if (
-                                                    (plugin_model.type?? && plugin_model.type == 'MODULE') || 
-                                                    (plugin_model.pluginName?? && plugin_model.pluginName?contains('-'))
-                                                    )> #i18n{pluginwizard.pluginwizard_create_plugin_description.labelModule}
-                                                    <#else> #i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugin} </#if> readonly
+                                               value=<#if (project_type?? && project_type == 'MODULE')> 
+                                         				"#i18n{pluginwizard.pluginwizard_create_plugin_description.labelModule}"
+                                         			<#elseif (project_type?? && project_type == 'WORKFLOWTASK')>
+                                         			    "#i18n{pluginwizard.pluginwizard_create_plugin_description.labelWorkflowTask}"		
+                                                    <#else> 
+                                                    	"#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugin}" 
+                                                    </#if> 
+                                               readonly
                                                style="background-color: #eeeeee;" />
                                     </div>
 								</div>
@@ -145,13 +148,23 @@
                                             <option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}</option>
                                             <option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}</option>
                                         </select>
+                                           <div id="pluginDbPoolRequired-help-message-div" class="mt-2 text-muted" aria-live="polite" role="alert">
+											<span id="pluginDbPoolRequired-help-message-span" class="d-block">
+												<i class="ti ti-info-circle mx-1"></i>
+													<#if (project_type?? && project_type == 'WORKFLOWTASK')> 
+														#i18n{pluginwizard.pluginwizard_create_plugin_description.helpRulesPluginDbPoolRequiredForWorkflowTask}
+													<#else>
+														#i18n{pluginwizard.pluginwizard_create_plugin_description.helpRulesPluginDbPoolRequired}
+													</#if>
+											</span>
+										</div>
                                     </div>
                                 </div>
                                 
                                 <!-- Submit Buttons -->
                                 <div class="row mb-3">
                                     <div class="col-md-9 offset-md-3">
-                                        <button type="submit" name="view_createPlugin" class="btn btn-primary me-2">
+                                        <button type="submit" name="action_PreviousNext" class="btn btn-primary me-2">
                                             <i class="ti ti-chevron-left"></i>
                                             #i18n{pluginwizard.pluginwizard_create_plugin_description.buttonBack}
                                         </button>
@@ -171,8 +184,11 @@
     </div>
 </div>
 
+<div id="result" ></div>
+
 <script src='js/plugins/pluginwizard/validator.js'></script>
 <script>
 	updateFormFront('create-description-form');
 	document.getElementById('create-description-form').addEventListener('input', function(event){validationForm(event);});
 </script>
+ 
